# Medical_Agentic_RAG

./: .env.example  .gitignore  README.md  pyproject.toml
docs/specs/: 2026-07-07-medical-rag-agent-design.md  2026-07-07-phase1-medical-data-ingestion-design.md
docs/superpowers/plans/: 2026-07-07-phase0-project-scaffolding.md  2026-07-08-phase1-medical-data-ingestion.md
scripts/: download_guidelines.py  download_mtsamples.py
src/medrag/: __init__.py  config.py
src/medrag/ingestion/: chunking.py  loaders.py  models.py  pipeline.py
tests/: test_config.py
tests/ingestion/: test_chunking.py  test_loaders.py  test_models.py  test_pipeline.py
