[project]
name = "medrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "dishant24", email = "dishantsutariya24@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
medrag = "medrag:main"

[build-system]
requires = ["uv_build>=0.11.27,<0.12.0"]
build-backend = "uv_build"
