[project]
name = "medrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "dishant24", email = "dishantsutariya24@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
]

[project.scripts]
medrag = "medrag:main"

[build-system]
requires = ["uv_build>=0.11.27,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "reportlab>=5.0.0",
]
